Changelog
=========


1.9.1 (unreleased)
------------------

- Nothing changed yet.


1.9.0 (2017-08-08)
------------------

- Move base test classes to own module. [mbaechtold]


1.8.3 (2017-03-30)
------------------

- Fix a bug which prevented inactive news from being shown in combination
  with Solr. [mbaechtold]


1.8.2 (2017-03-13)
------------------

- Fix a unicode bug when the RSS view is called on a news listing block
  having umlauts in its title. [mbaechtold]


1.8.1 (2017-03-07)
------------------

- Make NewsFolder and NewsListingBlock addable on plone site per default [raphael-s]


1.8.0 (2017-02-28)
------------------

- Fix a bug where the news portlet was shown when it shouldn't have
  been shown. [mbaechtold]

- Include inactive news items in the listing view and the news portlet
  if the user has the permission to add news items. [mbaechtold]


1.7.0 (2017-02-14)
------------------

- Fix news mopage template. [mbaechtold]

- Use "ftw.keywordwidget" as the widget used to enter subjects/keywords.
  You may need to install "select2" manually. See the README for more
  information. [mbaechtold]

- Fix the news portlet not able to render if subjects contain umlauts. [mbaechtold]

- Make News and NewsFolder linkable in TinyMCE
  [raphael-s]

- Unify news- and archive portlet markup

  - Use porlet class for wrapper on news-portlet.
  - Use header for title and section for body.

  [Kevin Bieri]


1.6.2 (2017-01-24)
------------------

- Add RSS views which are backwards compatible with ftw.contentpage
  (requires a custom browser layer for ftw.news).
  [mbaechtold]


1.6.1 (2017-01-17)
------------------

- Mopage: exclude file listings and galleries. [jone]


1.6.0 (2017-01-16)
------------------

- Add a new field on news items which can be used to define a custom external
  url (useful for mobile apps). [mbaechtold]


1.5.0 (2017-01-11)
------------------

- Users having the permission to add news items will see