@@ -1,10 +1,11 @@
-from ftw.news import _
 from ftw.keywordwidget.widget import KeywordFieldWidget
+from ftw.news import _
+from ftw.referencewidget.sources import ReferenceObjSourceBinder
+from ftw.referencewidget.widget import ReferenceWidgetFactory
 from plone.autoform import directives
 from plone.directives import form
-from plone.formwidget.contenttree import MultiContentTreeFieldWidget
-from plone.formwidget.contenttree import PathSourceBinder
 from z3c.relationfield import RelationChoice
+from z3c.relationfield import RelationList
 from zope import schema
 from zope.interface import invariant, Invalid
 
@@ -21,17 +22,14 @@ class INewsListingBaseSchema(form.Schema):
         default=u'',
     )
 
-    form.widget(filter_by_path=MultiContentTreeFieldWidget)
-    filter_by_path = schema.List(
+    directives.widget(filter_by_path=ReferenceWidgetFactory)
+    filter_by_path = RelationList(
         title=_(u'news_listing_config_filter_path_label',
                 default=u'Limit to path'),
         description=_(u'news_listing_config_filter_path_description',
                       default=u'Only show news items from a specific path.'),
         value_type=RelationChoice(
-            source=PathSourceBinder(
-                navigation_tree_query={'is_folderish': True},
-                is_folderish=True
-            ),
+            source=ReferenceObjSourceBinder(),
         ),
         required=False,
         missing_value=[],
