@@ -5,5 +5,6 @@
         <dependency>profile-ftw.datepicker:default</dependency>
         <dependency>profile-ftw.upgrade:default</dependency>
         <dependency>profile-ftw.keywordwidget:default</dependency>
+        <dependency>profile-ftw.referencewidget:default</dependency>
     </dependencies>
 </metadata>
