@@ -5,7 +5,8 @@ Changelog
 1.9.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use "ftw.referencewidget" as the widget for selecting the paths used
+  to filter the news items. [mbaechtold]
 
 
 1.9.0 (2017-08-08)
